Some more edits made

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			
 			<div class="logo-container">
 				<img src="./img/logo.svg" alt="logo" />
-				<h4 class="logo">Abdul's Tech</h4>
+				<h4 class="logo">DeLlY TeCh</h4>
 			</div>
 			<nav>
 				<!-- Add a toggle switch or button in your HTML -->
@@ -63,7 +63,14 @@
 			<img class="medium-circle" src="./img/mid-eclipse.svg" alt="" />
 			<img class="small-circle" src="./img/small-eclipse.svg" alt="" />
 		</main>
+		<br>
+		<br>
 
+		<footer class="footer">
+			<p>Created by: Abdul Waris</p>
+   		 	<p><a href="https://github.com/Waris-95" target="_blank">Gthub</a></p>
+    		<p><a href="https://www.linkedin.com/in/abdul-waris-aa1234aw/" target="_blank">LinkedIn </a></p>
+		</footer>
 
 		<script src="script.js"></script>
 	</body>
